# docs/swagger.yaml
@@ -128,6 +128,20 @@ definitions:
       level:
         type: string
     type: object
+  main.subjectPermission:
+    properties:
+      group_id:
+        type: string
+      level:
+        type: string
+    type: object
+  main.subjectPermissionsResponse:
+    properties:
+      permissions:
+        items:
+          $ref: '#/definitions/main.subjectPermission'
+        type: array
+    type: object
   main.subjectsResponse:
     properties:
       subjects:
@@ -745,6 +759,33 @@ paths:
           schema:
             $ref: '#/definitions/main.groupListResponse'
       summary: List the groups a subject belongs to
+  /subjects/{subject-id}/permissions:
+    get:
+      parameters:
+      - description: Subject identifier (username)
+        in: path
+        name: subject-id
+        required: true
+        type: string
+      - description: The acting user
+        in: query
+        name: user
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.subjectPermissionsResponse'
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: List the group permissions a subject holds
   /subjects/lookup:
     post:
       consumes:
